draft solution inclusion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.it.terrinoni.gdgtorino.hashcode=DEBUG
 logging.level.org.springframework=WARN
 
 # Input file name in resources
-input.filename=input/example.in
+input.filename=input/big.in
 
 # Output file name
 output.filename=result.out
