--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 logging.level.it.terrinoni.gdgtorino.hashcode=DEBUG
 logging.level.org.springframework=WARN
 
+
 # Input file name in resources
 input.filename=input/videos_worth_spreading.in
 
 # Output file name
-output.filename=result.out
+output.filename=videos_worth_spreading.out
